# 6502EaterEmulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml  cmake-multi-platform.yml
src/: CMakeLists.txt  computer.cpp  computer.h  main.cpp
src/core/: bus.cpp  bus.h  bus_master.h  bus_slave.h  clock.h  clocked_device.h  defines.h  device.h
src/cpu/: CMakeLists.txt  CPU.cpp  CPU.h  Opcodes.h
src/devices/: Device.h  EEPROM28C256.cpp  EEPROM28C256.h  SRAM62256.cpp  SRAM62256.h  VIAW65C22.cpp  VIAW65C22.h
src/devices/ArduinoMega/: ArduinoMega.cpp  ArduinoMega.h
src/devices/EEPROM28C256/: EEPROM28C256.cpp  EEPROM28C256.h
src/devices/HD44780LCD/: HD44780LCD.cpp  HD44780LCD.h  LCDAdapter.cpp  LCDAdapter.h
src/devices/SRAM62256/: SRAM62256.cpp  SRAM62256.h
src/devices/W65C02S/: CPUAdapter.cpp  CPUAdapter.h  W65C02S.cpp  W65C02S.h  opcodes.h
src/devices/W65C22S/: W65C22S.cpp  W65C22S.h
src/devices/W65C51N/: W65C51N.cpp  W65C51N.h
src/io/: BUS.h  EEPROM28C256.cpp  EEPROM28C256.h  IODevice.h  SRAM62256.cpp  SRAM62256.h
test_programs/: ld_st_jmp.s  wozmon.s
tests/: CMakeLists.txt
tests/W65C02S/: CMakeLists.txt
tests/W65C02S/instructions/: CMakeLists.txt  adc_test.cpp  and_test.cpp  cpu_instruction_test.h  eor_test.cpp  interrupt_test.cpp  jmp_test.cpp  lda_test.cpp  ldx_test.cpp  ldy_test.cpp  ora_test.cpp  sbc_test.cpp  sta_test.cpp  test_stack.cpp  transfers_test.cpp
tests/cpu/: CMakeLists.txt
tests/cpu/instructions/: CMakeLists.txt  adc_test.cpp  and_test.cpp  cpu_instruction_test.h  eor_test.cpp  jmp_test.cpp  lda_test.cpp  ldx_test.cpp  ldy_test.cpp  ora_test.cpp  sbc_test.cpp  sta_test.cpp
